scrolable html table

--- a/ts_processing.ipynb
+++ b/ts_processing.ipynb
@@ -19209,6 +19209,8 @@
     "    \"\"\"\n",
     "    Generates an HTML webpage displaying species data from a CSV with\n",
     "    thumbnail images and a modal for larger image viewing.\n",
+    "    Columns are sortable, 'Unnamed:0' column is removed, and the image column\n",
+    "    is labeled 'Time Series'.\n",
     "\n",
     "    Args:\n",
     "        csv_file_path (str): Path to the input CSV file.\n",
@@ -19224,6 +19226,11 @@
     "    except Exception as e:\n",
     "        print(f\"Error reading CSV file: {e}\")\n",
     "        return\n",
+    "\n",
+    "    # Remove 'Unnamed:0' column if it exists\n",
+    "    if 'Unnamed: 0' in df.columns:\n",
+    "        df = df.drop(columns=['Unnamed: 0'])\n",
+    "        print(\"Removed 'Unnamed: 0' column.\")\n",
     "\n",
     "    if 'AOU' not in df.columns:\n",
     "        print(\"Error: 'AOU' column not found in the CSV file.\")\n",
@@ -19261,6 +19268,17 @@
     "                background-color: #4CAF50;\n",
     "                color: white;\n",
     "                font-weight: bold;\n",
+    "                cursor: pointer; /* Indicate sortable columns */\n",
+    "                position: relative;\n",
+    "            }}\n",
+    "            th:hover {{\n",
+    "                background-color: #45a049;\n",
+    "            }}\n",
+    "            th .sort-arrow {{\n",
+    "                position: absolute;\n",
+    "                right: 10px;\n",
+    "                top: 50%;\n",
+    "                transform: translateY(-50%);\n",
     "            }}\n",
     "            tr:nth-child(even) {{\n",
     "                background-color: #f2f2f2;\n",
@@ -19322,15 +19340,16 @@
     "    </head>\n",
     "    <body>\n",
     "        <h1>Species Data Table</h1>\n",
-    "        <table>\n",
+    "        <table id=\"speciesTable\">\n",
     "            <thead>\n",
     "                <tr>\n",
     "    \"\"\"\n",
     "\n",
-    "    # Add table headers from DataFrame columns and an extra for 'Image'\n",
-    "    for col in df.columns:\n",
-    "        html_content += f\"                    <th>{col}</th>\\n\"\n",
-    "    html_content += \"                    <th>Image</th>\\n\"\n",
+    "    # Add table headers from DataFrame columns and an extra for 'Time Series'\n",
+    "    for i, col in enumerate(df.columns):\n",
+    "        html_content += f\"                    <th data-column-index=\\\"{i}\\\">{col}<span class=\\\"sort-arrow\\\"></span></th>\\n\"\n",
+    "    # The image column is the last one, its index will be len(df.columns)\n",
+    "    html_content += f\"                    <th data-column-index=\\\"{len(df.columns)}\\\">Time Series<span class=\\\"sort-arrow\\\"></span></th>\\n\"\n",
     "    html_content += \"\"\"\n",
     "                </tr>\n",
     "            </thead>\n",
@@ -19407,6 +19426,67 @@
     "                    modal.style.display = \"none\";\n",
     "                }\n",
     "            });\n",
+    "\n",
+    "            // Table Sorting Logic\n",
+    "            const table = document.getElementById('speciesTable');\n",
+    "            const headers = table.querySelectorAll('th');\n",
+    "            const tbody = table.querySelector('tbody');\n",
+    "\n",
+    "            let sortDirection = {}; // Stores the current sort direction for each column\n",
+    "\n",
+    "            headers.forEach(header => {\n",
+    "                header.addEventListener('click', function() {\n",
+    "                    const columnIndex = parseInt(this.dataset.columnIndex);\n",
+    "                    const currentSortDirection = sortDirection[columnIndex] || 'asc';\n",
+    "                    const newSortDirection = currentSortDirection === 'asc' ? 'desc' : 'asc';\n",
+    "\n",
+    "                    // Remove existing sort arrows\n",
+    "                    headers.forEach(h => {\n",
+    "                        const arrow = h.querySelector('.sort-arrow');\n",
+    "                        if (arrow) arrow.textContent = '';\n",
+    "                    });\n",
+    "\n",
+    "                    // Add new sort arrow\n",
+    "                    const arrow = this.querySelector('.sort-arrow');\n",
+    "                    if (arrow) {\n",
+    "                        arrow.textContent = newSortDirection === 'asc' ? ' ▲' : ' ▼';\n",
+    "                    }\n",
+    "\n",
+    "                    const rows = Array.from(tbody.querySelectorAll('tr'));\n",
+    "\n",
+    "                    rows.sort((rowA, rowB) => {\n",
+    "                        let cellA, cellB;\n",
+    "\n",
+    "                        // Handle the 'Time Series' (image) column specifically\n",
+    "                        if (columnIndex === headers.length - 1) { // Last column is the image column\n",
+    "                            cellA = rowA.cells[columnIndex].querySelector('.thumbnail')?.alt || '';\n",
+    "                            cellB = rowB.cells[columnIndex].querySelector('.thumbnail')?.alt || '';\n",
+    "                        } else {\n",
+    "                            cellA = rowA.cells[columnIndex].textContent.trim();\n",
+    "                            cellB = rowB.cells[columnIndex].textContent.trim();\n",
+    "                        }\n",
+    "\n",
+    "                        let comparison = 0;\n",
+    "\n",
+    "                        // Try to convert to number for numeric sorting\n",
+    "                        const numA = parseFloat(cellA);\n",
+    "                        const numB = parseFloat(cellB);\n",
+    "\n",
+    "                        if (!isNaN(numA) && !isNaN(numB)) {\n",
+    "                            comparison = numA - numB;\n",
+    "                        } else {\n",
+    "                            comparison = cellA.localeCompare(cellB);\n",
+    "                        }\n",
+    "\n",
+    "                        return newSortDirection === 'asc' ? comparison : -comparison;\n",
+    "                    });\n",
+    "\n",
+    "                    // Re-append sorted rows\n",
+    "                    rows.forEach(row => tbody.appendChild(row));\n",
+    "\n",
+    "                    sortDirection[columnIndex] = newSortDirection;\n",
+    "                });\n",
+    "            });\n",
     "        </script>\n",
     "    </body>\n",
     "    </html>\n",
@@ -19428,7 +19508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 150,
    "id": "9f75d8a8",
    "metadata": {},
    "outputs": [
