--- a/ts_processing.ipynb
+++ b/ts_processing.ipynb
@@ -27,7 +27,22 @@
    "id": "ddc48788",
    "metadata": {},
    "source": [
-    "# Reading the Species \n",
+    "# Breeding Bird Survey (BBS)\n",
+    "This repository contains the code and data for the Breeding Bird Survey (BBS) analysis. The BBS is a long-term, large-scale, international bird monitoring program that provides data on the population trends of North American birds.\n",
+    "\n",
+    "**official website**: https://www.pwrc.usgs.gov/BBS/\n",
+    "- data repository [here](https://www.sciencebase.gov/catalog/item/52b1dfa8e4b0d9b325230cd9)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0b9fba0",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "# Reading the Species file\n",
     "\n",
     "here's the output of the `SpeciesList.csv`"
    ]
