computed largest ts

--- a/ts_processing.ipynb
+++ b/ts_processing.ipynb
@@ -5713,6 +5713,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "id": "23ec578e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PAsseriformes with longest time series and high fraction of years sampled\n",
+    "aou_largos = spp_summary[(spp_summary['Order']=='Passeriformes') & (spp_summary['timeseries length']>=30)].sort_values(by='prct_years',ascending=False).head(10)['AOU']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "id": "c0e6a700",
    "metadata": {},
@@ -6087,12 +6098,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "id": "1aa7783a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "species_df = species_to_df(str(spp),totals_dict)\n",
+    "species_df = species_to_df('4930',totals_dict)\n",
     "\n",
     "# routes_df = route_to_df('1241120',totals_dict)\n",
     "# yrs_df = year_to_df(2018,totals_dict)"
@@ -35768,147 +35779,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "id": "1d71dfbc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "Route",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "0",
-         "rawType": "int64",
-         "type": "integer"
-        }
-       ],
-       "ref": "7741b511-aad2-40cf-b655-d59b0510383e",
-       "rows": [
-        [
-         "8406929",
-         "26"
-        ],
-        [
-         "8408129",
-         "26"
-        ],
-        [
-         "8405325",
-         "25"
-        ],
-        [
-         "84089908",
-         "25"
-        ],
-        [
-         "84069252",
-         "25"
-        ],
-        [
-         "12411126",
-         "25"
-        ],
-        [
-         "84081705",
-         "25"
-        ],
-        [
-         "12411208",
-         "25"
-        ],
-        [
-         "84003224",
-         "25"
-        ],
-        [
-         "84069238",
-         "24"
-        ],
-        [
-         "84081706",
-         "24"
-        ],
-        [
-         "84089906",
-         "24"
-        ],
-        [
-         "8405313",
-         "23"
-        ],
-        [
-         "84017372",
-         "23"
-        ],
-        [
-         "84003429",
-         "23"
-        ],
-        [
-         "12411608",
-         "23"
-        ],
-        [
-         "8408953",
-         "23"
-        ],
-        [
-         "8406948",
-         "23"
-        ],
-        [
-         "8409207",
-         "23"
-        ],
-        [
-         "84069136",
-         "22"
-        ]
-       ],
-       "shape": {
-        "columns": 1,
-        "rows": 20
-       }
-      },
-      "text/plain": [
-       "Route\n",
-       "8406929     26\n",
-       "8408129     26\n",
-       "8405325     25\n",
-       "84089908    25\n",
-       "84069252    25\n",
-       "12411126    25\n",
-       "84081705    25\n",
-       "12411208    25\n",
-       "84003224    25\n",
-       "84069238    24\n",
-       "84081706    24\n",
-       "84089906    24\n",
-       "8405313     23\n",
-       "84017372    23\n",
-       "84003429    23\n",
-       "12411608    23\n",
-       "8408953     23\n",
-       "8406948     23\n",
-       "8409207     23\n",
-       "84069136    22\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing Northern Rough-winged Swallow\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Route\n",
+      "8403422     26\n",
+      "84063101    26\n",
+      "8402727     26\n",
+      "8401731     26\n",
+      "8403414     25\n",
+      "dtype: int64\n",
+      "processing Mountain Bluebird\n",
+      "Route\n",
+      "8409230     26\n",
+      "8405328     26\n",
+      "84017217    26\n",
+      "8406057     26\n",
+      "8401731     26\n",
+      "dtype: int64\n",
+      "processing Willow Flycatcher\n",
+      "Route\n",
+      "8407236    27\n",
+      "8407235    27\n",
+      "8405326    27\n",
+      "8405325    27\n",
+      "8406147    26\n",
+      "dtype: int64\n",
+      "processing Marsh Wren\n",
+      "Route\n",
+      "8404647     26\n",
+      "8402103     26\n",
+      "84069252    25\n",
+      "8408101     25\n",
+      "12445105    25\n",
+      "dtype: int64\n",
+      "processing Philadelphia Vireo\n",
+      "Route\n",
+      "12476165    25\n",
+      "1247639     24\n",
+      "8404407     23\n",
+      "1240450     21\n",
+      "12404251    20\n",
+      "dtype: int64\n",
+      "processing Townsend's Warbler\n",
+      "Route\n",
+      "8408943     27\n",
+      "8408919     27\n",
+      "8405325     27\n",
+      "8408936     26\n",
+      "12411402    26\n",
+      "dtype: int64\n",
+      "processing Mountain Chickadee\n",
+      "Route\n",
+      "8409277     26\n",
+      "12411208    26\n",
+      "84069253    26\n",
+      "8408936     26\n",
+      "8408919     26\n",
+      "dtype: int64\n",
+      "processing Sedge Wren\n",
+      "Route\n",
+      "8409114     26\n",
+      "8409117     26\n",
+      "12445101    26\n",
+      "8405047     26\n",
+      "8405068     26\n",
+      "dtype: int64\n",
+      "processing Red Crossbill\n",
+      "Route\n",
+      "8406929     26\n",
+      "8408129     26\n",
+      "8405325     25\n",
+      "84089908    25\n",
+      "84069252    25\n",
+      "dtype: int64\n",
+      "processing Sagebrush Sparrow\n",
+      "Route\n",
+      "84033903    26\n",
+      "84033905    26\n",
+      "84033217    26\n",
+      "8408975     26\n",
+      "84033901    26\n",
+      "dtype: int64\n"
+     ]
     }
    ],
    "source": [
     "# species_df[species_df.lt(0)]#.loc[species_df.index > 1996].sum(axis=0)\n",
-    "kk = species_df > 0\n",
-    "kk.sum(axis=0).sort_values(ascending=False).head(20)\n"
+    "\n",
+    "for i in aou_largos: \n",
+    "    print('processing',get_spp_name(i,spps)['Common Name'])\n",
+    "    kk = species_to_df(str(i),totals_dict) > 0\n",
+    "    print(kk.sum(axis=0).sort_values(ascending=False).head(5))\n"
    ]
   },
   {
